Done promotion, continue fixing the date format in edit view. Working on product.

--- a/OnovaStore/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -114,6 +114,7 @@
 
                 // initialization of range datepicker
                 $.HSCore.components.HSRangeDatepicker.init('#rangeDatepicker, #rangeDatepicker2, #rangeDatepicker3');
+                $.HSCore.components.HSRangeDatepicker.init('.js-range-datepicker');
 
                 // initialization of datepicker
                 $.HSCore.components.HSDatepicker.init('#datepicker',
