--- a/OnovaStore/Areas/Manage/Views/Manager/EditProduct.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/EditProduct.cshtml
@@ -45,15 +45,15 @@
                         <div class="btn-group bootstrap-select js-select u-select--v3-select u-sibling w-100">
                             <select class="js-select u-select--v3-select u-sibling w-100" style="display: none;" tabindex="-98" name="ProductStatusId">
                                 @{
-                        var statuses = (List<GetProductStatusDTO>)ViewData["StatusSelection"];
+                                    var statuses = (List<GetProductStatusDTO>)ViewData["StatusSelection"];
 
-                        if (statuses != null)
-                        {
-                            foreach (var status in statuses)
-                            {
-                                <option value="@status.StatusId" selected="@(status.StatusId == Model.ProductStatusId)">@status.StatusName</option>
-                }
-            }
+                                    if (statuses != null)
+                                    {
+                                        foreach (var status in statuses)
+                                        {
+                                            <option value="@status.StatusId" selected="@(status.StatusId == Model.ProductStatusId)">@status.StatusName</option>
+                                        }
+                                    }
                                 }
                             </select>
                         </div>
@@ -126,15 +126,15 @@
                                 <div class="btn-group bootstrap-select js-select u-select--v3-select u-sibling w-100">
                                     <select id="CategoryId" name="CategoryId" data-size="auto" class="js-select u-select--v3-select u-sibling w-100 selectpicker" title="Category Name" style="display: none;" data-live-search="true" liveSearchStyle="contains" liveSearchNormalize="true" tabindex="-99">
                                         @{
-                                var categories = (List<GetCategoriesDTO>)ViewData["CategorySelection"];
+                                            var categories = (List<GetCategoriesDTO>)ViewData["CategorySelection"];
 
-                                if (categories != null)
-                                {
-                                    foreach (var category in categories)
-                                    {
-                                        <option value="@category.CategoryId" data-tokens="@category.CategoryName" selected="@(category.CategoryId == Model.CategoryId)">@category.CategoryName</option>
-                        }
-                    }
+                                            if (categories != null)
+                                            {
+                                                foreach (var category in categories)
+                                                {
+                                                    <option value="@category.CategoryId" data-tokens="@category.CategoryName" selected="@(category.CategoryId == Model.CategoryId)">@category.CategoryName</option>
+                                                }
+                                            }
                                         }
                                     </select>
                                 </div>
@@ -152,15 +152,15 @@
                                 <div class="btn-group bootstrap-select js-select u-select--v3-select u-sibling w-100">
                                     <select id="BrandId" name="BrandId" data-size="auto" class="js-select u-select--v3-select u-sibling w-100 selectpicker" title="Brand Name" style="display: none;" data-live-search="true" liveSearchStyle="contains" liveSearchNormalize="true" tabindex="-99">
                                         @{
-                                var brands = (List<GetBrandsDTO>)ViewData["BrandSelection"];
+                                            var brands = (List<GetBrandsDTO>)ViewData["BrandSelection"];
 
-                                if (brands != null)
-                                {
-                                    foreach (var brand in brands)
-                                    {
-                                        <option value="@brand.BrandId" data-tokens="@brand.BrandName" selected="@(brand.BrandId == Model.BrandId)">@brand.BrandName</option>
-                        }
-                    }
+                                            if (brands != null)
+                                            {
+                                                foreach (var brand in brands)
+                                                {
+                                                    <option value="@brand.BrandId" data-tokens="@brand.BrandName" selected="@(brand.BrandId == Model.BrandId)">@brand.BrandName</option>
+                                                }
+                                            }
                                         }
                                     </select>
                                 </div>
@@ -170,6 +170,20 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="form-group has-danger g-mb-30 ">
+                    <label class="g-mb-10">Hidden</label>
+                    <div class="g-pos-rel">
+                        <label class="form-check-inline u-check g-mr-20 mx-0 mb-0">
+                            <input class="g-hidden-xs-up g-pos-abs g-top-0 g-right-0" onchange="changeCheckboxValue();" @(Model.IsHide == true ? "checked" : "") type="checkbox" id="IsHide" name="IsHide" value="@Model.IsHide">
+
+                            <span class="u-check-icon-radio-v7">
+                                <i class="fa" data-check-icon=""></i>
+                            </span>
+                        </label>
+                        <input type="hidden" value="false" name="IsHide" />
                     </div>
                 </div>
 
@@ -183,3 +197,16 @@
     <div class="col-md-3">
     </div>
 </div>
+
+<script type="text/javascript">
+
+    function changeCheckboxValue() {
+        var ckb = document.getElementById("IsHide");
+
+        if (ckb.checked) {
+            ckb.value = true;
+        } else {
+            ckb.value = false;
+        }
+    }
+</script>
