Update basket partial

--- a/OnovaStore/Views/Shared/_Header.cshtml
+++ b/OnovaStore/Views/Shared/_Header.cshtml
@@ -177,7 +177,7 @@
 </div>
 <div class="col-sm-auto g-pr-15 g-pr-0--sm">
     <!-- Basket -->
-    
+    @Html.Partial("_Cart")
     <!-- End Basket -->
     <!-- Search -->
     <div class="d-inline-block g-valign-middle">
