continue on cookie and ajax add to cart function.

--- a/OnovaStore/Areas/Manage/Views/Manager/AddProduct.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/AddProduct.cshtml
@@ -112,7 +112,7 @@
         <span class="g-pos-abs g-top-0 g-right-0 d-block g-width-40 h-100 opacity-0 g-opacity-1--error">
             <i class="hs-admin-close g-absolute-centered g-font-size-default g-color-primary"></i>
         </span>
-        <input asp-for="Weight" class="form-control form-control-md g-brd-gray-light-v7 g-brd-gray-light-v3--focus g-rounded-4 g-px-14 g-py-10" type="number" placeholder="Product Weight">
+        <input asp-for="Weight" step="any" class="form-control form-control-md g-brd-gray-light-v7 g-brd-gray-light-v3--focus g-rounded-4 g-px-14 g-py-10" type="number" placeholder="Product Weight">
     </div>
     <span asp-validation-for="Weight" class="form-control-feedback"></span>
 </div>
