--- a/OnovaStore/Views/Home/Index.cshtml
+++ b/OnovaStore/Views/Home/Index.cshtml
@@ -44,14 +44,14 @@
                                         <span class="g-color-black g-line-height-1">@product.DisplayPrice</span>
                                         <ul class="list-inline g-color-gray-light-v2 g-font-size-14 g-line-height-1">
                                             <li class="list-inline-item align-middle g-brd-right g-brd-gray-light-v3 g-pr-10 g-mr-6">
-                                                <a class="g-color-gray-dark-v5 g-color-primary--hover g-text-underline--none--hover" onclick="addToCart(@product.ProductId)" title="Add to Cart"
+                                                <a class="g-color-gray-dark-v5 g-color-primary--hover g-text-underline--none--hover" href="@(isAuthenticated ? "" : "#addToCart")" @(isAuthenticated ? "" : @"data-modal-target=#addToCart data-modal-effect=fadein") onclick="addToCart(@product.ProductId); return false;" title="Add to Cart"
                                                    data-toggle="tooltip"
                                                    data-placement="top">
                                                     <i class="icon-finance-100 u-line-icon-pro"></i>
                                                 </a>
                                             </li>
                                             <li class="list-inline-item align-middle">
-                                                <a class="g-color-gray-dark-v5 g-color-primary--hover g-text-underline--none--hover" href="@(isAuthenticated ? "" : "#wishList")" @(isAuthenticated ? "" : @"data-modal-target=#wishList data-modal-effect=fadein")  title="Add to Wishlist"
+                                                <a class="g-color-gray-dark-v5 g-color-primary--hover g-text-underline--none--hover" href="@(isAuthenticated ? "" : "#wishList")" @(isAuthenticated ? "" : @"data-modal-target=#wishList data-modal-effect=fadein") title="Add to Wishlist"
                                                    data-toggle="tooltip"
                                                    data-placement="top">
                                                     <i class="icon-medical-022 u-line-icon-pro"></i>
@@ -86,11 +86,81 @@
     <p>You have to <a href="@Url.Action("Login", "Account", new {Area = ""})">login</a> to use this function</p>
 </div>
 
+<div id="addToCart" class="text-left g-max-width-300 g-bg-white g-overflow-y-auto g-pa-20" style="display: none; width: 700px">
+    <button type="button" class="close" onclick="Custombox.modal.close();">
+        <i class="hs-icon hs-icon-close"></i>
+    </button>
+    <h4 class="g-mb-20">Function require login</h4>
+    <p>You have to <a href="@Url.Action("Login", "Account", new {Area = ""})">login</a> to use this function</p>
+</div>
 <script type="text/javascript">
     function addToCart(id) {
         $.ajax({
-            url: window.location.hostname + @Url.Action("AddToCart", "Cart") + 'id=' + id,
+            url: 'http://localhost:58212' + '@Url.Action("AddToCart", "Cart")?id=' + id,
+            type: "get",
+            success: function(val) {
+                if (val) {
+                    var list = $.parseJSON(val);
+                    var imgUrl = 'http://res.cloudinary.com/vinhloc1996/image/upload/';
+                    $('div').remove('.cart-detail');
 
-    })
+                    list.forEach(function (object) {
+                        if (object.productThumbImage == null) {
+                            object.productThumbImage = 'b5aamndnqugqynwxzmm6';
+                        }
+                        var element =
+                            '<div class="js-scrollbar g-height-200 cart-detail"> <div class="u-basket__product g-brd-none g-px-20"> <div class="row no-gutters g-pb-5"> <div class="col-4 pr-3"> <a class="u-basket__product-img" href="#!"> <img class="img-fluid" src="' + imgUrl + object.productThumbImage + '" alt="Image Description"> </a> </div> <div class="col-8"> <h6 class="g-font-weight-400 g-font-size-default"> <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="' + object.slug + '">' + object.name + '</a> </h6> <small class="g-color-primary g-font-size-12">' + object.quantity + ' x $' + object.displayPrice + '</small> </div> </div> <button type="button" class="u-basket__product-remove">&times;</button> </div> </div>';
+
+                        $(element).insertAfter('.g-brd-bottom.g-brd-gray-light-v4.g-pa-15.g-mb-10');
+
+                        $('#totalPrice').text('$'+object.totalPrice);
+                    });
+
+                    $("#numberQuantity").text(list.length);
+                }
+            }
+        });
     }
 </script>
+@*
+        <script type="text/javascript">
+        var authenticated = @claimManager.IsAuthenticated;
+        var guid = "";
+
+        if (!authenticated) {
+            if (checkCookie) {
+                guid = getCookie('AnonymouseId');
+            }
+        }
+
+        
+
+        function setCookie(cname, cvalue, exdays) {
+            var d = new Date();
+            d.setTime(d.getTime() + (exdays*24*60*60*1000));
+            var expires = "expires="+ d.toUTCString();
+            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+        }
+
+        function getCookie(cname) {
+            var name = cname + "=";
+            var decodedCookie = decodeURIComponent(document.cookie);
+            var ca = decodedCookie.split(';');
+            for(var i = 0; i <ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') {
+                    c = c.substring(1);
+                }
+                if (c.indexOf(name) == 0) {
+                    return c.substring(name.length, c.length);
+                }
+            }
+            return "";
+        }
+
+        function checkCookie() {
+            var guid = getCookie("AnonymouseId");
+            return guid != "";
+        }
+    </script>
+*@
