--- a/OnovaStore/Views/Shared/_Cart.cshtml
+++ b/OnovaStore/Views/Shared/_Cart.cshtml
@@ -10,7 +10,7 @@
            data-dropdown-hide-on-scroll="false"
            data-dropdown-animation-in="fadeIn"
            data-dropdown-animation-out="fadeOut">
-            <span class="u-badge-v1--sm g-color-white g-bg-primary g-font-size-11 g-line-height-1_4 g-rounded-50x g-pa-4" style="top: 6px !important; right: 4px !important;">4</span>
+            <span class="u-badge-v1--sm g-color-white g-bg-primary g-font-size-11 g-line-height-1_4 g-rounded-50x g-pa-4" id="numberQuantity" style="top: 6px !important; right: 4px !important;"></span>
             <i class="icon-hotel-restaurant-105 u-line-icon-pro"></i>
         </a>
     </div>
@@ -19,87 +19,14 @@
         <div class="g-brd-bottom g-brd-gray-light-v4 g-pa-15 g-mb-10">
             <span class="d-block h6 text-center text-uppercase mb-0">Shopping Cart</span>
         </div>
-        <div class="js-scrollbar g-height-200">
-            <!-- Product -->
-            <div class="u-basket__product g-brd-none g-px-20">
-                <div class="row no-gutters g-pb-5">
-                    <div class="col-4 pr-3">
-                        <a class="u-basket__product-img" href="#!">
-                            <img class="img-fluid" src="../assets/img-temp/150x150/img1.jpg" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="col-8">
-                        <h6 class="g-font-weight-400 g-font-size-default">
-                            <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="#!">Black Glasses</a>
-                        </h6>
-                        <small class="g-color-primary g-font-size-12">1 x $22.00</small>
-                    </div>
-                </div>
-                <button type="button" class="u-basket__product-remove">&times;</button>
-            </div>
-            <!-- End Product -->
-            <!-- Product -->
-            <div class="u-basket__product g-brd-none g-px-20">
-                <div class="row no-gutters g-pb-5">
-                    <div class="col-4 pr-3">
-                        <a class="u-basket__product-img" href="#!">
-                            <img class="img-fluid" src="../assets/img-temp/150x150/img2.jpg" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="col-8">
-                        <h6 class="g-font-weight-400 g-font-size-default">
-                            <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="#!">Gloves</a>
-                        </h6>
-                        <small class="g-color-primary g-font-size-12">2 x $55.00</small>
-                    </div>
-                </div>
-                <button type="button" class="u-basket__product-remove">&times;</button>
-            </div>
-            <!-- End Product -->
-            <!-- Product -->
-            <div class="u-basket__product g-brd-none g-px-20">
-                <div class="row no-gutters g-pb-5">
-                    <div class="col-4 pr-3">
-                        <a class="u-basket__product-img" href="#!">
-                            <img class="img-fluid" src="../assets/img-temp/150x150/img3.jpg" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="col-8">
-                        <h6 class="g-font-weight-400 g-font-size-default">
-                            <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="#!">Chukka Shoes</a>
-                        </h6>
-                        <small class="g-color-primary g-font-size-12">1 x $199.00</small>
-                    </div>
-                </div>
-                <button type="button" class="u-basket__product-remove">&times;</button>
-            </div>
-            <!-- End Product -->
-            <!-- Product -->
-            <div class="u-basket__product g-brd-none g-px-20">
-                <div class="row no-gutters g-pb-5">
-                    <div class="col-4 pr-3">
-                        <a class="u-basket__product-img" href="#!">
-                            <img class="img-fluid" src="../assets/img-temp/150x150/img4.jpg" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="col-8">
-                        <h6 class="g-font-weight-400 g-font-size-default">
-                            <a class="g-color-black g-color-primary--hover g-text-underline--none--hover" href="#!">Desk Clock</a>
-                        </h6>
-                        <small class="g-color-primary g-font-size-12">1 x $12.00</small>
-                    </div>
-                </div>
-                <button type="button" class="u-basket__product-remove">&times;</button>
-            </div>
-            <!-- End Product -->
-        </div>
+        
         <div class="clearfix g-px-15">
             <div class="row align-items-center text-center g-brd-y g-brd-gray-light-v4 g-font-size-default">
                 <div class="col g-brd-right g-brd-gray-light-v4">
                     <strong class="d-block g-py-10 text-uppercase g-color-main g-font-weight-500 g-py-10">Total</strong>
                 </div>
                 <div class="col">
-                    <strong class="d-block g-py-10 g-color-main g-font-weight-500 g-py-10">$433.00</strong>
+                    <strong class="d-block g-py-10 g-color-main g-font-weight-500 g-py-10" id="totalPrice"></strong>
                 </div>
             </div>
         </div>
